# STL-Complement

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
doc/: .gitignore  algorithm.rst  conf.py  dynamic_array.rst  functional.rst  index.rst  iterator.rst
examples/: CMakeLists.txt
examples/quicksort/: example.cpp  quicksort.h
include/stdc/: algorithm.h  dynamic_array.h  functional.h  iterator.h
include/stdc/bits/: algorithm_impl.h  dynamic_array_impl.h  functional_impl.h  iterator_impl.h
test/: .gitignore  CMakeLists.txt  test_stdc.cpp  test_stdc_algorithm.cpp  test_stdc_functional.cpp  test_stdc_iterator.cpp
